// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as small 1`] = `
<div
  className="inputWrapper small"
>
  <label
    className="label"
  >
    <input
      className="input"
      disabled={false}
      onChange={[Function]}
      readOnly={false}
      type="text"
    />
  </label>
</div>
`;

exports[`renders correctly in a disabled state 1`] = `
<div
  className="inputWrapper normal"
>
  <label
    className="label"
  >
    <input
      className="input"
      disabled={true}
      onChange={[Function]}
      readOnly={false}
      type="text"
    />
  </label>
</div>
`;

exports[`renders correctly in a readonly state 1`] = `
<div
  className="inputWrapper normal"
>
  <label
    className="label"
  >
    <input
      className="input"
      disabled={true}
      onChange={[Function]}
      readOnly={false}
      type="text"
    />
  </label>
</div>
`;

exports[`renders correctly with a placeholder 1`] = `
<div
  className="inputWrapper normal"
>
  <label
    className="label"
  >
    <input
      className="input"
      disabled={false}
      onChange={[Function]}
      placeholder="My placeholder"
      readOnly={false}
      type="text"
    />
    <span
      className="labelContent"
    >
      My placeholder
    </span>
  </label>
</div>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="inputWrapper normal"
>
  <label
    className="label"
  >
    <input
      className="input"
      disabled={false}
      onChange={[Function]}
      readOnly={false}
      type="text"
    />
  </label>
</div>
`;
